added 2 more panels

--- a/index.html
+++ b/index.html
@@ -29,8 +29,108 @@
                         <button>WORK WITH US!</button>
                     </div>
                 </div>
-                <div class="panel">
-                    
+            </section>
+            <section>
+                <div class="panel teal">
+                    <div class="section-header">
+                        <h1>SERVICES WE PROVIDE</h1>
+                        <span><hr></span>
+                        <p>We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications</p>
+                    </div>
+                    <div class="content-wrapper">
+                        <div class="content-block">
+                            <img src="img/flag-icon.png">
+                            <h2>BRANDING</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                        </div>
+                        <div class="content-block">
+                            <img src="img/pencil-icon.png">
+                            <h2>DESIGN</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                        </div>
+                        <div class="content-block">
+                            <img src="img/gears-icon.png">
+                            <h2>DEVELOPMENT</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                        </div>
+                        <div class="content-block">
+                            <img src="img/rocket-icon.png">
+                            <h2>ROCKET SCIENCE</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="panel grey">
+                    <div class="section-header">
+                        <h1>MEET OUR BEAUTIFUL TEAM</h1>
+                        <span><hr></span>
+                        <p>We are a small team of designers and developers, who help brands with big ideas</p>
+                    </div>
+                    <div class="content-wrapper">
+                        <div class="content-wrapper">
+                            <div class="content-block">
+                                <div class="circle"></div>
+                                <h2>TEAM MEMBER 1</h2>
+                                <p class="job-title">CEO / Marketing</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                                <div class="social-icons">
+                                    <ul>
+                                        <li><img src="img/facebook-icon.png"></li>
+                                        <li><img src="img/twitter-icon.png"></li>
+                                        <li><img src="img/linkedIn-icon.png"></li>
+                                        <li><img src="img/mail-icon.png"></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="content-block">
+                                <div class="circle"></div>
+                                <h2>TEAM MEMBER 2</h2>
+                                <p class="job-title">Designer</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                                <div class="social-icons">
+                                    <ul>
+                                        <li><img src="img/facebook-icon.png"></li>
+                                        <li><img src="img/twitter-icon.png"></li>
+                                        <li><img src="img/linkedIn-icon.png"></li>
+                                        <li><img src="img/mail-icon.png"></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="content-block">
+                                <div class="circle"></div>
+                                <h2>TEAM MEMBER 3</h2>
+                                <p class="job-title">Developer/Brainiac</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                                <div class="social-icons">
+                                    <ul>
+                                        <li><img src="img/facebook-icon.png"></li>
+                                        <li><img src="img/twitter-icon.png"></li>
+                                        <li><img src="img/linkedIn-icon.png"></li>
+                                        <li><img src="img/mail-icon.png"></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="content-block">
+                                <div class="circle"></div>
+                                <h2>TEAM MEMBER 4</h2>
+                                <p class="job-title">SEO</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                                <div class="social-icons">
+                                    <ul>
+                                        <li><img src="img/facebook-icon.png"></li>
+                                        <li><img src="img/twitter-icon.png"></li>
+                                        <li><img src="img/linkedIn-icon.png"></li>
+                                        <li><img src="img/mail-icon.png"></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>     
