added skill-set panel

--- a/index.html
+++ b/index.html
@@ -69,67 +69,95 @@
                         <p>We are a small team of designers and developers, who help brands with big ideas</p>
                     </div>
                     <div class="content-wrapper">
-                        <div class="content-wrapper">
-                            <div class="content-block">
-                                <div class="circle"></div>
-                                <h2>TEAM MEMBER 1</h2>
-                                <p class="job-title">CEO / Marketing</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <li><img src="img/facebook-icon.png"></li>
-                                        <li><img src="img/twitter-icon.png"></li>
-                                        <li><img src="img/linkedIn-icon.png"></li>
-                                        <li><img src="img/mail-icon.png"></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="content-block">
-                                <div class="circle"></div>
-                                <h2>TEAM MEMBER 2</h2>
-                                <p class="job-title">Designer</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <li><img src="img/facebook-icon.png"></li>
-                                        <li><img src="img/twitter-icon.png"></li>
-                                        <li><img src="img/linkedIn-icon.png"></li>
-                                        <li><img src="img/mail-icon.png"></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="content-block">
-                                <div class="circle"></div>
-                                <h2>TEAM MEMBER 3</h2>
-                                <p class="job-title">Developer/Brainiac</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <li><img src="img/facebook-icon.png"></li>
-                                        <li><img src="img/twitter-icon.png"></li>
-                                        <li><img src="img/linkedIn-icon.png"></li>
-                                        <li><img src="img/mail-icon.png"></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="content-block">
-                                <div class="circle"></div>
-                                <h2>TEAM MEMBER 4</h2>
-                                <p class="job-title">SEO</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <li><img src="img/facebook-icon.png"></li>
-                                        <li><img src="img/twitter-icon.png"></li>
-                                        <li><img src="img/linkedIn-icon.png"></li>
-                                        <li><img src="img/mail-icon.png"></li>
-                                    </ul>
-                                </div>
+                        <div class="content-block">
+                            <div class="circle"></div>
+                            <h2>TEAM MEMBER 1</h2>
+                            <p class="job-title">CEO / Marketing</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                            <div class="social-icons">
+                                <ul>
+                                    <li><img src="img/facebook-icon.png"></li>
+                                    <li><img src="img/twitter-icon.png"></li>
+                                    <li><img src="img/linkedIn-icon.png"></li>
+                                    <li><img src="img/mail-icon.png"></li>
+                                </ul>
                             </div>
                         </div>
+
+                        <div class="content-block">
+                            <div class="circle"></div>
+                            <h2>TEAM MEMBER 2</h2>
+                            <p class="job-title">Designer</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                            <div class="social-icons">
+                                <ul>
+                                    <li><img src="img/facebook-icon.png"></li>
+                                    <li><img src="img/twitter-icon.png"></li>
+                                    <li><img src="img/linkedIn-icon.png"></li>
+                                    <li><img src="img/mail-icon.png"></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="content-block">
+                            <div class="circle"></div>
+                            <h2>TEAM MEMBER 3</h2>
+                            <p class="job-title">Developer/Brainiac</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                            <div class="social-icons">
+                                <ul>
+                                    <li><img src="img/facebook-icon.png"></li>
+                                    <li><img src="img/twitter-icon.png"></li>
+                                    <li><img src="img/linkedIn-icon.png"></li>
+                                    <li><img src="img/mail-icon.png"></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="content-block">
+                            <div class="circle"></div>
+                            <h2>TEAM MEMBER 4</h2>
+                            <p class="job-title">SEO</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium risus a.</p>
+                            <div class="social-icons">
+                                <ul>
+                                    <li><img src="img/facebook-icon.png"></li>
+                                    <li><img src="img/twitter-icon.png"></li>
+                                    <li><img src="img/linkedIn-icon.png"></li>
+                                    <li><img src="img/mail-icon.png"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="panel white">
+                    <div class="section-header">
+                        <h1>WE GOT SKILLS!</h1>
+                        <span><hr></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pellentesque velit<br> vitae augue fermentum posuere. Nullam tincidunt in dui non.</p>
+                    </div>
+                    <div class="content-wrapper">
+                        <div class="content-block">
+                            <div class="skill-set web-design"><span>90%</span></div>
+                            <h2>WEB DESIGN</h2>
+                        </div>
+
+                        <div class="content-block">
+                            <div class="skill-set html"><span>75%</span></div>
+                            <h2>HTML / CSS</h2>
+                        </div>
+
+                        <div class="content-block">
+                            <div class="skill-set graphic-design"><span>70%</span></div>
+                            <h2>GRAPHIC DESIGN</h2>
+                        </div>
+
+                        <div class="content-block">
+                            <div class="skill-set ui"><span>85%</span></div>
+                            <h2>UI / UX</h2>
+                      </div>
                     </div>
                 </div>
             </section>
