begin pink panel build

--- a/index.html
+++ b/index.html
@@ -161,6 +161,47 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="panel tan">
+                    <div class="section-header">
+                        <h1>OUR PORTFOLIO</h1>
+                        <span><hr></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pellentesque velit<br> vitae augue fermentum posuere. Nullam tincidunt in dui non.</p>
+                    </div>    
+                    <div class="project-filter">
+                        <div class="job all">
+                            <p>ALL</p>
+                        </div>
+                        <div class="job web">
+                            <p>WEB</p>
+                        </div>
+                        <div class="job apps">
+                            <p>APPS</p>
+                        </div>
+                        <div class="job icons">
+                            <p>ICONS</p>
+                        </div>
+                    </div>
+                    <div class="content-wrapper">
+                        <ul class="laptop-images">
+                            <li><img src="img/laptop1.png"></li>
+                            <li><img src="img/laptop2.png"></li>
+                            <li><img src="img/laptop3.png"></li>
+                            <li><img src="img/laptop4.png"></li>
+                        </ul>
+                        <button>LOAD MORE PROJECTS</button>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="panel pink">
+                    <div class="section-header">
+                        <h1>WHAT PEOPLE SAY ABOUT US</h1>
+                        <span><hr></span>
+                        <p>Our clients love us!</p>
+                    </div>
+                </div>
+            </section>
         </div>     
     </body>
 </html>
