initial structure for pink panel

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                         <span><hr></span>
                         <p>Our clients love us!</p>
                     </div>
+                    <div class="content-wrapper">
+                        
+                    </div>
                 </div>
             </section>
         </div>     
