--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Fake-Ass Site</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- If adding Bootstrap, un-comment below and remove normalize, add the bootstrap file to CSS dir -->
@@ -201,12 +201,77 @@
                         <p>Our clients love us!</p>
                     </div>
                     <div class="content-wrapper">
-                        
+                        <div class="row">
+                            <div class="testimonial-wrapper">
+                                <img src="img/mugshot.png">
+                                <div class="quote">
+                                    <p><em>&ldquo;His ut natum congue, at menandri <br>nominati referrentur eum. Ex sed<br> adhuc patrioque, per explicari.&rdquo;</em></p>
+                                    <h2>FAMOUS PERSON 1</h2>
+                                    <p>Job Title</p>
+                                </div>
+                            </div>
+                            <div class="testimonial-wrapper">
+                                <img src="img/mugshot.png">
+                                <div class="quote">
+                                    <p><em>&ldquo;His ut natum congue, at menandri <br>nominati referrentur eum. Ex sed<br> adhuc patrioque, per explicari.&rdquo;</em></p>
+                                    <h2>FAMOUS PERSON 2</h2>
+                                    <p>Job Title</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="testimonial-wrapper">
+                                <img src="img/mugshot.png">
+                                <div class="quote">
+                                    <p><em>&ldquo;His ut natum congue, at menandri <br>nominati referrentur eum. Ex sed<br> adhuc patrioque, per explicari.&rdquo;</em></p>
+                                    <h2>FAMOUS PERSON 3</h2>
+                                    <p>Job Title</p>
+                                </div>
+                            </div>
+                            <div class="testimonial-wrapper">
+                                <img src="img/mugshot.png">
+                                <div class="quote">
+                                    <p><em>&ldquo;His ut natum congue, at menandri <br>nominati referrentur eum. Ex sed<br> adhuc patrioque, per explicari.&rdquo;</em></p>
+                                    <h2>FAMOUS PERSON 4</h2>
+                                    <p>Job Title</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="panel blue">
+                    <div class="section-header">
+                        <h1>GET IN TOUCH</h1>
+                        <span><hr></span>
+                        <p>1600 Pennsylvania Ave NW, Washington DC 20500, United States of America. Tel: (202).456.1111</p>
+                    </div>
+                    <div class="content-wrapper">
+                        <form>
+                            <input type="text" class="nameEmail" placeholder="Your Name" required>
+                            <input type="text" class="nameEmail" placeholder="Your Email" required><br>
+                            <input type="textarea" class="message" placeholder="Your Message"><br>
+                            <button>Send Message</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <footer>
+                    <div class="panel footer-wrapper ">
+                        <ul class="footer-social-links">
+                            <li>FaceBook</li>
+                            <li>Twitter</li>
+                            <li>Google+</li>
+                            <li>LinkedIn</li>
+                            <li>Behance</li>
+                            <li>Dribble</li>
+                            <li>GitHub</li>
+                        </ul>
+                    </div>
+                </footer>
+            </section>
         </div> 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </body>
 </html>
