added bootstrap.js and styled nav

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
     </head>
     <body data-spy="scroll" data-target=".navbar">
         <div class="container">
@@ -272,6 +273,8 @@
                     </div>
                 </footer>
             </section>
-        </div> 
+        </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" scr="js/bootstrap.min.js"></script> 
     </body>
 </html>
