responsive adjustments and addded viewport meta tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </ul>
                     </nav>
                     <div class="section-header">
-                        <h1>HiHi there! We are the new kids on the block<br> and we build awesome website and mobile apps</h1>
+                        <h1>HiHi there! We are the new kids on the block<br class="hide"> and we build awesome website and mobile apps</h1>
                         <button>WORK WITH US!</button>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="section-header">
                         <h1>SERVICES WE PROVIDE</h1>
                         <span><hr></span>
-                        <p>We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications</p>
+                        <p>We are working with both individuals and businesses from all over the globe<br class="hide"> to create awesome websites and applications</p>
                     </div>
                     <div class="content-wrapper">
                         <div class="content-block">
@@ -139,7 +139,7 @@
                     <div class="section-header">
                         <h1>WE GOT SKILLS!</h1>
                         <span><hr></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pellentesque velit<br> vitae augue fermentum posuere. Nullam tincidunt in dui non.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pellentesque velit<br class="hide"> vitae augue fermentum posuere. Nullam tincidunt in dui non.</p>
                     </div>
                     <div class="content-wrapper">
                         <div class="content-block">
@@ -169,7 +169,7 @@
                     <div class="section-header">
                         <h1>OUR PORTFOLIO</h1>
                         <span><hr></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pellentesque velit<br> vitae augue fermentum posuere. Nullam tincidunt in dui non.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pellentesque velit<br class="hide"> vitae augue fermentum posuere. Nullam tincidunt in dui non.</p>
                     </div>    
                     <div class="project-filter">
                         <div class="job all">
@@ -253,8 +253,8 @@
                     <div class="content-wrapper">
                         <form>
                             <input type="text" class="nameEmail" placeholder="Your Name" required>
-                            <input type="text" class="nameEmail" placeholder="Your Email" required><br>
-                            <input type="textarea" class="message" placeholder="Your Message"><br>
+                            <input type="text" class="nameEmail" placeholder="Your Email" required><br class="hide">
+                            <input type="textarea" class="message" placeholder="Your Message"><br class="hide">
                             <button>Send Message</button>
                         </form>
                     </div>
