finish-up responsive adjustments

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section>
                 <div class="panel purple navbar" id="purple">
                     <a href="#home"><img src="img/logo.png" class="logo"></a>
-                    <nav>
+                    <nav class='hide'>
                         <ul class="nav">
                             <li class="nav-item"><a href="#purple">HOMEBASE</a></li>
                             <li class="nav-item"><a href="#teal">SERVICES</a></li>
@@ -197,7 +197,7 @@
                 </div>
             </section>
             <section>
-                <div class="panel pink" id="pink">
+                <div class="panel pink hide" id="pink">
                     <div class="section-header">
                         <h1>WHAT PEOPLE SAY ABOUT US</h1>
                         <span><hr></span>
@@ -248,7 +248,7 @@
                     <div class="section-header">
                         <h1>GET IN TOUCH</h1>
                         <span><hr></span>
-                        <p>1600 Pennsylvania Ave NW, Washington DC 20500, United States of America. Tel: (202).456.1111</p>
+                        <p>1600 Pennsylvania Ave NW, Washington DC 20500<br> United States of America.<br> Tel: (202).456.1111</p>
                     </div>
                     <div class="content-wrapper">
                         <form>
