--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                             <li class="nav-item"><a href="#purple">HOMEBASE</a></li>
                             <li class="nav-item"><a href="#teal">SERVICES</a></li>
                             <li class="nav-item"><a href="#grey">TEAM</a></li>
+                            <li class="nav-item"><a href="#white">SKILLS</a></li>
                             <li class="nav-item"><a href="#tan">PORT.</a></li>
                             <li class="nav-item"><a href="#pink">TESTIMONIALS</a></li>
                             <li class="nav-item"><a href="#blue">CONTACT</a></li>
