--- a/index.html
+++ b/index.html
@@ -283,11 +283,20 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script> 
         <script type="text/javascript">
         $(document).ready(function(){
-
+            $('#white').hide();
             //Bootstrap scrollSpy
             $('body').scrollspy({ target: '.navbar' })
 
-           $(window).scrollTop
+            //enterSkills stores how many pixels from the top of the document the window is.
+            var enterSkills = $(window).scrollTop();
+            function animateSkills(){
+                if(enterSkills >= 2081){
+                    $('#grey').show('slow')
+                }
+            };
+
+            //throwing an error and I dont know the fuck why?
+            $('window').onScroll(){}
         });
         </script>
     </body>
